homepage overflow fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4268,16 +4268,11 @@ blockquote:before,
   text-align: center;
 }
 .home-hero-module .content h1 {
-  font-size: 6em;
+  font-size: 10em;
   font-weight: bold;
-  letter-spacing: 1px;
-  line-height: 90px;
+
 }
 
-.constrained .content h2 {
-  font-size: 2em;
-  font-weight: bold;
-}
 .home-hero-module .play-overlay-video-on-click {
   color: inherit;
   font-size: 600%;
